Fix: statblock shrink-wrap (container collapse + cell width)

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -41,6 +41,7 @@ table.statblock {
       text-align: left;
       font-weight: 700;
       letter-spacing: 0.03em;
+      width: 1px;
       white-space: nowrap;
       border: none;
       border-bottom: 2px solid var(--darkgray);
@@ -54,6 +55,7 @@ table.statblock {
     td {
       padding: 2px 8px 2px 0;
       text-align: left;
+      width: 1px;
       white-space: nowrap;
       border: none;
     }
